[gd_scene load_steps=20 format=2]

[ext_resource path="res://Table/Table.tscn" type="PackedScene" id=1]
[ext_resource path="res://InteractiveObjects/Flippers/Flipper.tscn" type="PackedScene" id=2]
[ext_resource path="res://InteractiveObjects/Plunger.tscn" type="PackedScene" id=3]
[ext_resource path="res://Manager.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Limelight/Limelight-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Card_Blank (2).png" type="Texture" id=6]
[ext_resource path="res://Table/GoalScoreManager.gd" type="Script" id=7]
[ext_resource path="res://InteractiveObjects/LightUps/LightUp.tscn" type="PackedScene" id=8]
[ext_resource path="res://Table/ExtraDiceLights.gd" type="Script" id=9]
[ext_resource path="res://InteractiveObjects/TurtlePW.tscn" type="PackedScene" id=10]
[ext_resource path="res://Audio/Dice & Bite.wav" type="AudioStream" id=11]
[ext_resource path="res://Background/SharkFins.png" type="Texture" id=12]
[ext_resource path="res://Assets/Fonts/Monoton/Monoton-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://new_theme.tres" type="Theme" id=14]

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 3
outline_color = Color( 0.0392157, 0.360784, 0.623529, 1 )
extra_spacing_top = -37
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 4
outline_color = Color( 0.223529, 0.156863, 0.454902, 1 )
use_filter = true
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 150
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 221.5, 13.5 )

[node name="Game" type="Node2D"]
position = Vector2( 77, 20 )
script = ExtResource( 4 )

[node name="Table" parent="." instance=ExtResource( 1 )]

[node name="Plunger" parent="Table" instance=ExtResource( 3 )]
position = Vector2( 765, 686 )

[node name="Label6" type="Label" parent="."]
margin_left = 445.0
margin_top = 336.0
margin_right = 836.0
margin_bottom = 627.0
rect_scale = Vector2( 0.429881, 0.461876 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0.996078, 0.964706, 0.866667, 1 )
custom_fonts/font = SubResource( 4 )
text = "DICE"
align = 1
valign = 1

[node name="Label8" type="Label" parent="."]
margin_left = 445.0
margin_top = 349.0
margin_right = 836.0
margin_bottom = 640.0
rect_scale = Vector2( 0.429881, 0.461876 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0.996078, 0.964706, 0.866667, 1 )
custom_fonts/font = SubResource( 5 )
text = "&"
align = 1
valign = 1

[node name="Label7" type="Label" parent="."]
margin_left = 445.0
margin_top = 379.0
margin_right = 836.0
margin_bottom = 670.0
rect_scale = Vector2( 0.429881, 0.461876 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0.996078, 0.964706, 0.866667, 1 )
custom_fonts/font = SubResource( 4 )
text = "BITE"
align = 1
valign = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="FlipperL" parent="." instance=ExtResource( 2 )]
position = Vector2( 468, 633 )
scale = Vector2( -1, 1 )
up_torque = -450000
input_key = "ui_left"

[node name="FlipperR" parent="." instance=ExtResource( 2 )]
position = Vector2( 585, 634 )
up_torque = 450000

[node name="SpawnLocation" type="Node2D" parent="."]
position = Vector2( 769, 310 )

[node name="Score" type="Node2D" parent="."]
position = Vector2( 560, 554 )
script = ExtResource( 7 )

[node name="CardBlankTens" type="Sprite" parent="Score"]
position = Vector2( -61.7405, -219.74 )
rotation = -0.308221
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Score/CardBlankTens"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -17.9207
margin_top = -29.9235
margin_right = 104.079
margin_bottom = 173.076
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="CardBlankOnes" type="Sprite" parent="Score"]
position = Vector2( 3.25952, -221.741 )
rotation = 0.232641
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Score/CardBlankOnes"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -18.0
margin_top = -30.0
margin_right = 104.0
margin_bottom = 173.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="DiceFallZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiceFallZone"]
position = Vector2( 524.5, 701 )
shape = SubResource( 3 )

[node name="LightsManager" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Light" parent="LightsManager" instance=ExtResource( 8 )]
position = Vector2( 388, 29 )

[node name="Light2" parent="LightsManager" instance=ExtResource( 8 )]
position = Vector2( 432, 34 )

[node name="Light3" parent="LightsManager" instance=ExtResource( 8 )]
position = Vector2( 456, 70 )

[node name="Light4" parent="LightsManager" instance=ExtResource( 8 )]
position = Vector2( 349, 53 )

[node name="Light5" parent="LightsManager" instance=ExtResource( 8 )]
position = Vector2( 334, 102 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="SharkFins" type="Sprite" parent="."]
position = Vector2( 597, 315 )
scale = Vector2( 0.469, 0.469 )
texture = ExtResource( 12 )

[node name="SharkFins2" type="Sprite" parent="."]
position = Vector2( 457, 316 )
rotation = -0.0512797
scale = Vector2( -0.469368, 0.469368 )
texture = ExtResource( 12 )

[node name="Pinwheel" parent="." instance=ExtResource( 10 )]
position = Vector2( 396, 102 )

[connection signal="body_entered" from="DiceFallZone" to="." method="_on_DiceFallZone_body_entered"]
[connection signal="body_exited" from="DiceFallZone" to="." method="_on_DiceFallZone_body_exited"]
